--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@sanity/cli": "^3.82.0",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.82.0",
+    "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.486.0",
     "next": "15.2.3",
+    "next-sanity": "^9.9.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sanity": "^3.82.0",
+    "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
