--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.82.0",
     "@tabler/icons-react": "^3.31.0",
+    "@types/react-icons": "^2.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
@@ -24,6 +25,7 @@
     "next-sanity": "^9.9.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sanity": "^3.82.0",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
