--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.82.0",
     "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query-devtools": "^5.74.6",
     "@types/react-icons": "^2.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
