--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "lucide-react": "^0.486.0",
     "next": "15.2.3",
     "next-sanity": "^9.9.9",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "sanity": "^3.82.0",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.1.0",
