--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bprogress/core": "^1.3.4",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
@@ -30,6 +31,7 @@
     "next": "15.2.3",
     "next-sanity": "^9.9.9",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
